Alterecao no codigo do histograma.

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "18ccb133",
    "metadata": {},
    "outputs": [
@@ -549,18 +549,17 @@
    "source": [
     "import pandas as pd\n",
     "import plotly.express as px\n",
-    "import streamlit\n",
-    "\n",
+    "import streamlit as st\n",
     "\n",
     "car_data = pd.read_csv('vehicles.csv') #lendos os dados.\n",
-    "fig = px.histogram(car_data, x=\"model_year\") #criando histograma com o valor do odômetro.\n",
+    "fig = px.histogram( car_data , x = \"model_year\") #criando histograma com o ano do veiculo.\n",
     "fig.show() #exibindo.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "cf1bae8f",
    "metadata": {},
    "outputs": [
