Ajustando gráficos incluindo(títulos, legendas nos eixos, e melhorando layout).

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "id": "18ccb133",
    "metadata": {},
    "outputs": [
@@ -51691,9 +51691,6 @@
          },
          "tracegroupgap": 0
         },
-        "margin": {
-         "t": 60
-        },
         "template": {
          "data": {
           "candlestick": [
@@ -52170,6 +52167,9 @@
           ]
          }
         },
+        "title": {
+         "text": "Condição do Veículo VS Preço"
+        },
         "xaxis": {
          "anchor": "y",
          "categoryarray": [
@@ -52186,7 +52186,7 @@
           1
          ],
          "title": {
-          "text": "condition"
+          "text": "Condição do Veículo"
          }
         },
         "yaxis": {
@@ -52196,7 +52196,7 @@
           1
          ],
          "title": {
-          "text": "sum of price"
+          "text": "Preço"
          }
         }
        }
@@ -52211,10 +52211,17 @@
     "import plotly.express as px\n",
     "import streamlit as st\n",
     "\n",
-    "car_data = pd.read_csv('vehicles.csv') #lendos os dados.\n",
-    "car_data_tips = px.data.tips()\n",
-    "fig = px.histogram(car_data , x = \"condition\", y = \"price\", color = 'condition', color_discrete_sequence=px.colors.qualitative.Set1) #criando histograma com as condições que os veículos estão VS o preço.\n",
-    "fig.show() #exibindo."
+    "car_data = pd.read_csv('vehicles.csv') #Importando os dados.\n",
+    "\n",
+    "fig = px.histogram(\n",
+    "    car_data,\n",
+    "      x = \"condition\",\n",
+    "      y = \"price\",\n",
+    "      title='Condição do Veículo VS Preço',\n",
+    "      color = 'condition',\n",
+    "      color_discrete_sequence=px.colors.qualitative.Set1)#criando histograma com as condições que os veículos estão VS o preço.\n",
+    "fig.update_layout(xaxis_title=\"Condição do Veículo\", yaxis_title=\"Preço\")#Titulos, eixos, etc. \n",
+    "fig.show() #exibindo.\n"
    ]
   },
   {
@@ -105757,6 +105764,7 @@
         }
        ],
        "layout": {
+        "height": 1000,
         "legend": {
          "title": {
           "text": "model"
@@ -106245,6 +106253,7 @@
         "title": {
          "text": "Relação entre Modelo e Odômetro"
         },
+        "width": 1400,
         "xaxis": {
          "anchor": "y",
          "categoryarray": [
@@ -106377,9 +106386,21 @@
     }
    ],
    "source": [
-    "fig = px.scatter(car_data, x= \"model\", y=\"odometer\", color='model',color_discrete_sequence=px.colors.qualitative.Set1)\n",
-    "fig.update_layout(xaxis_tickangle=45,title= \"Relação entre Modelo e Odômetro\", xaxis_title=\"Modelo de Veículo\", yaxis_title=\"Odômetro\")#Criando umma aparencia melhor para analisar entre \n",
-    "fig.show() #exibindo"
+    "fig = px.scatter(\n",
+    "    car_data,\n",
+    "    x= \"model\",\n",
+    "    y=\"odometer\",\n",
+    "    color='model',\n",
+    "    color_discrete_sequence=px.colors.qualitative.Set1\n",
+    "    )#criando um gráfico de dispersão entre modelo de carro VS odômetro.\n",
+    "fig.update_layout(\n",
+    "    xaxis_tickangle=45,\n",
+    "    title= \"Relação entre Modelo e Odômetro\",\n",
+    "    xaxis_title=\"Modelo de Veículo\",\n",
+    "    yaxis_title=\"Odômetro\",\n",
+    "    )#Criando umma aparencia melhor para analisar entre \n",
+    "fig.show() #exibindo\n",
+    "fig.update_layout(width=1400, height=1000) #Aumentando o tamanho do gráfico."
    ]
   }
  ],
