Estava gerando 2 graficos de dispersao, ajutado.

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "18ccb133",
    "metadata": {},
    "outputs": [
@@ -52220,7 +52220,10 @@
     "      title='Condição do Veículo VS Preço',\n",
     "      color = 'condition',\n",
     "      color_discrete_sequence=px.colors.qualitative.Set1)#criando histograma com as condições que os veículos estão VS o preço.\n",
-    "fig.update_layout(xaxis_title=\"Condição do Veículo\", yaxis_title=\"Preço\")#Titulos, eixos, etc. \n",
+    "fig.update_layout(\n",
+    "    xaxis_title=\"Condição do Veículo\",\n",
+    "    yaxis_title=\"Preço\"\n",
+    "    )#Titulos, eixos, etc. \n",
     "fig.show() #exibindo.\n"
    ]
   },
@@ -106398,9 +106401,9 @@
     "    title= \"Relação entre Modelo e Odômetro\",\n",
     "    xaxis_title=\"Modelo de Veículo\",\n",
     "    yaxis_title=\"Odômetro\",\n",
-    "    )#Criando umma aparencia melhor para analisar entre \n",
-    "fig.show() #exibindo\n",
-    "fig.update_layout(width=1400, height=1000) #Aumentando o tamanho do gráfico."
+    "    )#Criando uma aparencia melhor para analisar entre os modelos de carro e odômetro.\n",
+    "fig.update_layout(width=1400, height=1000) #Aumentando o tamanho do grfico.\n",
+    "fig.show()#exibindo"
    ]
   }
  ],
