Ajustando erros de portugues

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -106401,7 +106401,7 @@
     "    title= \"Relação entre Modelo e Odômetro\",\n",
     "    xaxis_title=\"Modelo de Veículo\",\n",
     "    yaxis_title=\"Odômetro\",\n",
-    "    )#Criando uma aparencia melhor para analisar entre os modelos de carro e odômetro.\n",
+    "    )#Criando uma aparencia melhor para analisar os modelos de carro e odômetro.\n",
     "fig.update_layout(width=1400, height=1000) #Aumentando o tamanho do grfico.\n",
     "fig.show()#exibindo"
    ]
