Ajustanto Tamanho do grafico de dispersao.

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -52229,7 +52229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 79,
    "id": "cf1bae8f",
    "metadata": {},
    "outputs": [
@@ -105767,7 +105767,7 @@
         }
        ],
        "layout": {
-        "height": 800,
+        "autosize": true,
         "legend": {
          "title": {
           "text": "model"
@@ -105775,7 +105775,10 @@
          "tracegroupgap": 0
         },
         "margin": {
-         "t": 60
+         "b": 50,
+         "l": 50,
+         "r": 50,
+         "t": 50
         },
         "template": {
          "data": {
@@ -106256,7 +106259,6 @@
         "title": {
          "text": "Relação entre Modelo e Odômetro"
         },
-        "width": 1000,
         "xaxis": {
          "anchor": "y",
          "categoryarray": [
@@ -106402,7 +106404,10 @@
     "    xaxis_title=\"Modelo de Veículo\",\n",
     "    yaxis_title=\"Odômetro\",\n",
     "    )#Criando uma aparencia melhor para análisar os modelos de carro e odômetro.\n",
-    "fig.update_layout(width=1000, height=800) #Aumentando o tamanho do gráfico.\n",
+    "fig.update_layout(\n",
+    "    autosize=True,  # Permite redimensionamento automático\n",
+    "    margin=dict(l=50, r=50, t=50, b=50),\n",
+    "    )#Redimencionando o tamanho do grafico.\n",
     "fig.show()#exibindo"
    ]
   }
