DImensao do grafico de dispersao. ajustando altura e largura.

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -52229,7 +52229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 80,
    "id": "cf1bae8f",
    "metadata": {},
    "outputs": [
@@ -105768,6 +105768,7 @@
        ],
        "layout": {
         "autosize": true,
+        "height": 800,
         "legend": {
          "title": {
           "text": "model"
@@ -106259,6 +106260,7 @@
         "title": {
          "text": "Relação entre Modelo e Odômetro"
         },
+        "width": 1000,
         "xaxis": {
          "anchor": "y",
          "categoryarray": [
@@ -106407,6 +106409,7 @@
     "fig.update_layout(\n",
     "    autosize=True,  # Permite redimensionamento automático\n",
     "    margin=dict(l=50, r=50, t=50, b=50),\n",
+    "    width=1000, height=800\n",
     "    )#Redimencionando o tamanho do grafico.\n",
     "fig.show()#exibindo"
    ]
