Aumentando a largura do grafico de dispersao.

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -52229,7 +52229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "id": "cf1bae8f",
    "metadata": {},
    "outputs": [
@@ -105768,7 +105768,6 @@
        ],
        "layout": {
         "autosize": true,
-        "height": 800,
         "legend": {
          "title": {
           "text": "model"
@@ -106409,7 +106408,7 @@
     "fig.update_layout(\n",
     "    autosize=True,  # Permite redimensionamento automático\n",
     "    margin=dict(l=50, r=50, t=50, b=50),\n",
-    "    width=1000, height=800\n",
+    "    width=1000\n",
     "    )#Redimencionando o tamanho do grafico.\n",
     "fig.show()#exibindo"
    ]
